--- a/support.html
+++ b/support.html
@@ -1,27 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Support Me</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="downloads.html">Downloads</a>
-    <a href="tutorials.html">Tutorials</a>
-    <a href="support.html">Support Me</a>
-  </nav>
+<section class="content">
+  <h2>Support My Work 💖</h2>
+  <p>If you enjoy my downloads and tutorials, you can support me here:</p>
 
-  <h1>Support My Work 💖</h1>
-  <section class="content">
-    <p>If you enjoy my content and want to help me keep creating, you can support me here:</p>
-    <a href="https://www.patreon.com/yourusername" target="_blank" class="download-btn">Patreon</a>
-    <a href="https://ko-fi.com/yourusername" target="_blank" class="download-btn">Ko-fi</a>
-  </section>
-  <footer>
-  © 2025 My Resource Hub | Built by Me with ❤️
-</footer>
-</body>
-</html>
+  <!-- Patreon Button -->
+  <a href="https://www.patreon.com/yourusername" target="_blank" class="download-btn">
+    Support on Patreon
+  </a>
+
+  <!-- Ko-fi Button -->
+  <a href="https://ko-fi.com/yourusername" target="_blank" class="download-btn">
+    Buy Me a Coffee
+  </a>
+
+  <!-- Example Affiliate Link -->
+  <p style="margin-top:20px;">Check out the tools I use for my tutorials:</p>
+  <a href="https://amzn.to/your-affiliate-link" target="_blank" class="download-btn">
+    Recommended Software/Hardware
+  </a>
+</section>
