--- a/support.html
+++ b/support.html
@@ -1,4 +1,21 @@
-<section class="content">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Support Me</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="downloads.html">Downloads</a>
+    <a href="tutorials.html">Tutorials</a>
+    <a href="support.html">Support Me</a>
+  </nav>
+
+  <h1>Support My Work 💖</h1>
+  <section class="content">
   <h2>Support My Work 💖</h2>
   <p>If you enjoy my downloads and tutorials, you can support me here:</p>
 
@@ -18,3 +35,8 @@
     Recommended Software/Hardware
   </a>
 </section>
+  <footer>
+  © 2025 My Resource Hub | Built by Me with ❤️
+</footer>
+</body>
+</html>
