--- a/download.html
+++ b/download.html
@@ -15,19 +15,25 @@
   </nav>
 
   <h1>Downloads</h1>
-  <section class="content">
-    <article>
-      <h2>Template 1 – HTML Starter</h2>
-      <p>Basic website starter file for beginners.</p>
-      <a href="assetsc:\Users\Pawan\Downloads\Compressed\save.zip/template1.zip" download class="download-btn">Download</a>
-    </article>
+  <<section class="content">
+  <article>
+    <h2>Template Pack 01</h2>
+    <p>Starter HTML/CSS template for beginners.</p>
+    <a href="assets/template1.zip" download class="download-btn">Download</a>
+  </article>
 
-    <article>
-      <h2>Wallpaper Pack 01</h2>
-      <p>High-res PC wallpapers created by me.</p>
-      <a href="assets/wallpapers.zip" download class="download-btn">Download</a>
-    </article>
-  </section>
+  <article>
+    <h2>Wallpaper Pack 01</h2>
+    <p>High-resolution PC wallpapers.</p>
+    <a href="assets/wallpapers.zip" download class="download-btn">Download</a>
+  </article>
+
+  <article>
+    <h2>Web Tutorial PDF</h2>
+    <p>Step-by-step guide to creating your first website.</p>
+    <a href="assets/tutorial.pdf" download class="download-btn">Download</a>
+  </article>
+</section>
   <footer>
   © 2025 My Resource Hub | Built by Me with ❤️
 </footer>
